Updated BioAI parser, modmaker percentages